[knibert][clients][java][elements-generator] Moved all elements info data to the info.properties file.

--- a/src/main/webapp/resources/knibert/help/info.properties
+++ b/src/main/webapp/resources/knibert/help/info.properties
@@ -19,7 +19,25 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-game.knibert.element=
+
+game.knibert.element.BAD_APPLE            =Stone.
+game.knibert.element.GOOD_APPLE           =Having eaten it, you shorten it in length. If it is not long enough, you die.
+game.knibert.element.BREAK                =An obstacle that cannot be passed. It is also the border of the field.
+game.knibert.element.NONE                 =An empty place in the field where the hero can go.
+game.knibert.element.HEAD_DOWN            =Hero head is pointing down.
+game.knibert.element.HEAD_LEFT            =Hero head is pointing left.
+game.knibert.element.HEAD_RIGHT           =Hero head is pointing right.
+game.knibert.element.HEAD_UP              =Hero head is pointing up.
+game.knibert.element.TAIL_HORIZONTAL      =Horizontal middle part of the body.
+game.knibert.element.TAIL_VERTICAL        =Vertical middle part of the body.
+game.knibert.element.TAIL_LEFT_DOWN       =Turning the hero body (middle) from left to down.
+game.knibert.element.TAIL_LEFT_UP         =Turning the hero body (middle) from left to up.
+game.knibert.element.TAIL_RIGHT_DOWN      =Turning the hero body (middle) from right to down.
+game.knibert.element.TAIL_RIGHT_UP        =Turning the hero body (middle) from right to up.
+game.knibert.element.TAIL_END_DOWN        =Down tail end.
+game.knibert.element.TAIL_END_LEFT        =Left tail end.
+game.knibert.element.TAIL_END_UP          =Up tail end.
+game.knibert.element.TAIL_END_RIGHT       =Right tail end.
 
 game.knibert.settings.BOARD_SIZE          =[Level] Board size
 game.knibert.settings.GAME_OVER_PENALTY   =[Score] Game over penalty
